--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,6 @@
-# Telegram Configuration
-TELEGRAM_TOKEN=your_bot_token_here
-ADMIN_ID=your_telegram_user_id
-GROUP_CHAT_ID=your_group_chat_id
-
-# MongoDB Configuration
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.example.mongodb.net/?retryWrites=true&w=majority
-
-# Port Configuration (for Koyeb)
+TELEGRAM_TOKEN=your_bot_token
+ADMIN_ID=your_user_id
+MONGO_URI=mongodb_connection_string
+GROUP_CHAT_ID=your_group_id
 PORT=8000
+KOYEB=true # Set this for Koyeb deployment
