--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-python-telegram-bot==20.3
-pymongo==4.5.0
-flask==2.2.3
-werkzeug==2.2.3
-python-dotenv==1.0.0
+pyrogram==2.0.0
+Flask==2.0.0
+pymongo==4.0.0
+python-dotenv==0.19.0
