--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pyrogram
-tgcrypto
+pyrogram==2.0.0
 flask==2.0.0
-werkzeug==2.0.0
 pymongo==4.0.0
 python-dotenv==0.19.0
+tgcrypto==1.2.0
 dnspython==2.0.0
+werkzeug==2.0.0
