--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pyrogram>=2.0.0
-flask==2.0.0
-pymongo==4.0.0
-python-dotenv==0.19.0
-tgcrypto>=1.2.0
-dnspython==2.0.0
-werkzeug==2.0.0
+pyrogram==2.0.106
+flask==2.2.5
+pymongo==4.5.0
+python-dotenv==1.0.0
+tgcrypto==1.2.5
+dnspython==2.4.2
