--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-pyrogram==2.0.106
-flask==2.2.5
-pymongo==4.5.0
-python-dotenv==1.0.0
-tgcrypto==1.2.5
-dnspython==2.4.2
+pyrogram
+tgcrypto
+pymongo
+Flask
