--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 pyrogram==2.0.106
-tgcrypto==1.2.4
-pymongo==4.3.3
+TgCrypto==1.2.4
 flask==2.2.2
+werkzeug==2.2.2
+pymongo==4.3.3
 requests==2.28.2
 python-dotenv==0.21.0
